fix(ui): fixed overflow in auth layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -150,6 +150,8 @@ html {
 }
 
 .wrapper {
+  padding: 0;
+  margin: 0;
   background-image: url("./discordbg.png");
   width: 100%;
   height: 100%;
